Updated Start Script
Start Script was invoking on emitter.js it should be on server.js

--- a/Backed/package.json
+++ b/Backed/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node emitter.js"
+    "start": "node server.js"
   },
   "author": "Nishant Tiwari",
   "license": "ISC",
