--- a/Backed/package.json
+++ b/Backed/package.json
@@ -2,7 +2,7 @@
   "name": "solo",
   "version": "1.0.0",
   "description": "The Social Media Player",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
