--- a/Backed/package.json
+++ b/Backed/package.json
@@ -13,19 +13,20 @@
     "async-waterfall": "^0.1.5",
     "bluebird": "^3.5.3",
     "chalk": "^4.0.0",
+    "cors": "^2.8.5",
     "date-and-time": "^0.6.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.7",
     "serve": "^10.0.0",
     "socket.io": "^2.1.1",
-    "swagger-ui-express": "^4.1.4",
-    "jsonwebtoken": "^8.5.1"
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
